--- a/sass/parts/_media.sass
+++ b/sass/parts/_media.sass
@@ -1,12 +1,8 @@
 @media screen and (max-width: 1455px)
   .main-title
     font-size: rem(80px)
-
-@media screen and (max-width: 1200px) 
-  .main-title
-    font-size: rem(70px)
+ 
   
-
 @media screen and (max-width: 1200px) 
   .ul
     margin-left: 70px
@@ -22,7 +18,10 @@
     justify-content: center
   .rectangle
     margin: 0
-
+  .main-title
+    font-size: rem(70px)
+  .centerer
+    margin: auto
  
   .inner-menu-title
     font-family: 'YesevaOne' sans-serif
@@ -144,8 +143,10 @@
     flex-basis: 80%
     margin-bottom: rem(30px)
 
-
-
+  .menu-catalog
+    width: auto
+  .inner-menu:after
+    width: rem(370px)
 
 
 
