--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,5 +4,6 @@
 @import 'parts/_section.sass'
 @import 'parts/_section-2.sass'
 @import 'parts/_footer.sass'
+@import 'parts/_elements.sass'
 @import 'parts/_media.sass'
-@import 'parts/_button.sass'
+// @import 'parts/_button.sass'
