--- a/sass/parts/_media.sass
+++ b/sass/parts/_media.sass
@@ -85,6 +85,8 @@
   
 
 @media screen and (max-width: 992px)
+  .script-snow
+    display: none
   .main-title
    font-size: rem(60px)
   .main
@@ -145,6 +147,7 @@
 
   .menu-catalog
     width: auto
+    margin-left: rem(20px)
   .inner-menu:after
     width: rem(370px)
 
