--- a/sass/parts/_media.sass
+++ b/sass/parts/_media.sass
@@ -139,18 +139,21 @@
     margin-top: rem(30px)
   .img-abount
     padding-left: 0
-  
+  .rewiews-content
+    padding-top: rem(60px)
   .img-reser
     margin: 0
     flex-basis: 80%
     margin-bottom: rem(30px)
-
+  .img-reservation
+    width: rem(371px)
   .menu-catalog
     width: auto
     margin-left: rem(20px)
   .inner-menu:after
     width: rem(370px)
-
+  .inner-menu
+    padding-top: rem(15px)
 
 
 @media screen and (max-width: 536px)
@@ -160,7 +163,9 @@
     margin-right: rem(20px)
 
 
-
+@media screen and (max-width: 388px)
+  .img-reservation
+    width: rem(340px  )
 
 
 
