--- a/sass/parts/_media.sass
+++ b/sass/parts/_media.sass
@@ -137,6 +137,8 @@
   .learn-more-2
     margin: 0
     margin-top: rem(30px)
+  .abount-me
+    padding: 0 3rem
   .img-abount
     padding-left: 0
   .rewiews-content
