--- a/css/style.css
+++ b/css/style.css
@@ -10734,6 +10734,10 @@ body, html {
   padding: 0;
 }
 
+.col {
+  padding: 0;
+}
+
 .header {
   margin: 0;
   padding: 0;
@@ -11348,8 +11352,30 @@ a, a:link, a:visited {
   }
 
   .menu {
-    position: absolute;
-    left: 100%;
+    display: flex;
+    z-index: 12;
+    position: fixed;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+  }
+
+  .inner-menu {
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    background: #000;
+  }
+
+  .ul {
+    padding: 0;
+    margin: 0;
+    padding: 70px 40px 40px 70px;
+    flex-direction: column;
+  }
+
+  .link {
+    margin: 0;
   }
 
   .abount-me {
