--- a/sass/parts/_media.sass
+++ b/sass/parts/_media.sass
@@ -94,8 +94,25 @@
   .hamburgers
     position: relative
   .menu
-    position: absolute
-    left: 100%
+    display: flex
+    z-index: 12
+    position: fixed
+    flex-direction: column
+    justify-content: center
+    align-items: flex-end
+  .inner-menu
+    align-items: center
+    display: flex
+    justify-content: center
+    background: #000
+  .ul
+    padding: 0
+    margin: 0
+    padding: 70px 40px 40px 70px
+    flex-direction: column
+  .link
+    margin: 0 
+    // top: -100%
   .abount-me  
     margin-top: rem(20px)
     margin-bottom: rem(20px)
