--- a/sass/parts/_header.sass
+++ b/sass/parts/_header.sass
@@ -110,7 +110,6 @@ a, a:link, a:visited
 .hamburgers
   display: none
 
-
-.icon
-  height: 20px
-  width: 20px
+.icon-color
+  color: #dab33e
+  margin-left: 10px
