--- a/sass/parts/_media.sass
+++ b/sass/parts/_media.sass
@@ -91,28 +91,32 @@
    font-size: rem(60px)
   .main
     padding: 0
-  .hamburgers
+  .header
     position: relative
   .menu
     display: flex
     z-index: 12
-    position: fixed
+    position: absolute
     flex-direction: column
     justify-content: center
-    align-items: flex-end
-  .inner-menu
     align-items: center
-    display: flex
-    justify-content: center
     background: #000
+    top: -300%
+    transition: .4s
+  
   .ul
     padding: 0
     margin: 0
-    padding: 70px 40px 40px 70px
     flex-direction: column
+    padding: 40px 0 0 0
+  .icon
+    padding-bottom: rem(50px)
   .link
     margin: 0 
+    text-transform: uppercase
     // top: -100%
+  .menu.is-active 
+    top: 0
   .abount-me  
     margin-top: rem(20px)
     margin-bottom: rem(20px)
