--- a/sass/parts/_section-2.sass
+++ b/sass/parts/_section-2.sass
@@ -203,13 +203,12 @@
   font-size: 14px
   color: #c9a131
 .button
+  position: relative
   margin: auto
   margin-top: rem(40px)
 // input:active
 //   color: #c9a131
 //   border: 1px solid #c9a131
-
-
 
 
 
